# wl-mouse

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  flake.nix
src/: cli.rs  consts.rs  device.rs  hyprland.rs  main.rs  protocol.rs  types.rs
