[package]
name = "wl-mouse"
version = "0.1.4"
edition = "2021"
description = "CLI tool for WLmouse gaming mice (Beast X Mini Pro, etc.)"
license = "AGPL-3.0-or-later"
keywords = ["usb", "mouse", "hid", "wlmouse", "gaming"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4", features = ["derive"] }
hidapi = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
